--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "trustoss-spec": "0.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-2": "^6.17.0",
     "careful": "^1.1.0",
     "ghooks": "^1.3.2",
     "standard": "^8.3.0",
